--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "coffee-script": "^1.8.0",
     "gulp": "^3.8.8",
     "gulp-coffee": "^2.2.0",
-    "gulp-util": "^3.0.1"
+    "gulp-util": "^3.0.1",
+    "gulp-webserver": "^0.8.1"
   }
 }
