--- a/package.json
+++ b/package.json
@@ -24,7 +24,13 @@
     "gulp": "^3.8.8",
     "gulp-coffee": "^2.2.0",
     "gulp-coffeelint": "^0.4.0",
+    "gulp-karma": "0.0.4",
     "gulp-util": "^3.0.1",
-    "gulp-webserver": "^0.8.1"
+    "gulp-webserver": "^0.8.1",
+    "karma": "^0.12.23",
+    "karma-chrome-launcher": "^0.1.4",
+    "karma-coffee-preprocessor": "^0.2.1",
+    "karma-firefox-launcher": "^0.1.3",
+    "karma-jasmine": "^0.1.5"
   }
 }
