--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "angular-multiselect",
   "version": "0.0.0",
   "description": "an agular directive for multi-selects",
-  "main": "index.js",
+  "main": "angular-multiselect.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "gulp test"
   },
   "repository": {
     "type": "git",
@@ -22,8 +22,11 @@
   "devDependencies": {
     "coffee-script": "^1.8.0",
     "gulp": "^3.8.8",
+    "gulp-angular-templatecache": "^1.4.1",
     "gulp-coffee": "^2.2.0",
     "gulp-coffeelint": "^0.4.0",
+    "gulp-concat": "^2.4.1",
+    "gulp-if": "^1.2.5",
     "gulp-karma": "0.0.4",
     "gulp-util": "^3.0.1",
     "gulp-webserver": "^0.8.1",
@@ -31,6 +34,8 @@
     "karma-chrome-launcher": "^0.1.4",
     "karma-coffee-preprocessor": "^0.2.1",
     "karma-firefox-launcher": "^0.1.3",
-    "karma-jasmine": "^0.1.5"
+    "karma-jasmine": "^0.1.5",
+    "lazypipe": "^0.2.2",
+    "rimraf": "^2.2.8"
   }
 }
